services/audiobookshelf/ingress-test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf-ingress
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://audiobookshelf.test.local.hohepa.dev
    gethomepage.dev/group: Services
    gethomepage.dev/name: Audiobookshelf
    gethomepage.dev/icon: audiobookshelf.png
    gethomepage.dev/app: audiobookshelf
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`audiobookshelf.test.local.hohepa.dev`)
      kind: Rule
      services:
        - name: audiobookshelf
          port: 80
  tls:
    secretName: test-local-hohepa-dev-tls
